--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,18 @@
 <resources>
-    <string name="app_name">HW2</string>
+    <string name="app_name">Tip_Calculator</string>
     <string name="lblTips">Tips</string>
     <string name="txtTotalAmount">Total amount</string>
-    <string name="lblTaxAmount">"Tax amount  "</string>
+    <string name="lblTaxAmount">"Tax amount:  "</string>
     <string name="rbtnZeroPercent">0%</string>
     <string name="rbtnFivePercent">5%</string>
     <string name="rbtnTenPercent">10%</string>
     <string name="rbtnTwentyPercent">20%</string>
     <string name="btnClear">Clear</string>
     <string name="btnCalculate">Calculate</string>
+    <string name="lblTotalAmount">Total amount:</string>
+    <string name="lblTipPercentage">Tip %:</string>
+    <string name="lblTipAmount">Tip amount:</string>
+    <string name="lblGrandTotal">Grand Total:</string>
+    <string name="btnBackToTipCalc_Input">Back to Tip Calculator Input</string>
 
 </resources>
